package main

import (
	"net"
	"os"
	"os/signal"
	"syscall"

	"ndugu-backend/internal/common"
	"ndugu-backend/internal/repository"
	"ndugu-backend/internal/services"
)

func main() {
	// Initialiser le logger
	logger := common.NewSugarLogger()

	// Initialiser les repositories
	userRepo := repository.NewMockUserRepository() // TODO: Remplacer par une vraie impl√©mentation
	oryClient := repository.NewOryClient(logger)

	// Initialiser les services
	authService := services.NewAuthService(userRepo, oryClient, logger)

	// Cr√©er le serveur gRPC
	grpcServer := NewGRPCServer(authService, logger)

	// D√©marrer le serveur gRPC
	go func() {
		lis, err := net.Listen("tcp", ":50051")
		if err != nil {
			logger.Error("Erreur lors de l'√©coute gRPC: %v", err)
			os.Exit(1)
		}

		logger.Info("Serveur gRPC d√©marr√© sur le port 50051")
		if err := grpcServer.Serve(lis); err != nil {
			logger.Error("Erreur lors du d√©marrage du serveur gRPC: %v", err)
			os.Exit(1)
		}
	}()

	logger.Info("üöÄ Serveur Ndugu Backend d√©marr√©")
	logger.Info("üì° gRPC Server: localhost:50051")
	logger.Info("")
	logger.Info("üîó Endpoints gRPC disponibles:")
	logger.Info("    - ndugu.v1.AuthService/CreateUser - Cr√©er un utilisateur")
	logger.Info("    - ndugu.v1.AuthService/GetUser - R√©cup√©rer un utilisateur")
	logger.Info("    - ndugu.v1.AuthService/ValidateSession - Valider une session")
	logger.Info("    - ndugu.v1.AuthService/CreateOAuth2Client - Cr√©er un client OAuth2")
	logger.Info("    - ndugu.v1.AuthService/CreatePermission - Cr√©er une permission")
	logger.Info("    - ndugu.v1.AuthService/CheckPermission - V√©rifier une permission")
	logger.Info("    - ndugu.v1.CustomerService/CreateCustomer - Cr√©er un client")
	logger.Info("")
	logger.Info("üîß Services Ory:")
	logger.Info("  - Kratos: http://localhost:4433 (public), http://localhost:4434 (admin)")
	logger.Info("  - Hydra: http://localhost:4444 (public), http://localhost:4445 (admin)")
	logger.Info("  - Keto: http://localhost:4466 (read), http://localhost:4467 (write)")
	logger.Info("")
	logger.Info("üåç API Gateway (APISIX): http://localhost:9080")

	// Attendre un signal d'arr√™t
	quit := make(chan os.Signal, 1)
	signal.Notify(quit, syscall.SIGINT, syscall.SIGTERM)
	<-quit

	logger.Info("üõë Arr√™t du serveur...")
	// TODO: Impl√©menter l'arr√™t gracieux
}
